RESOLVED FIXED300083
Vorbis decoder can't be instantiated in the content process on Sonoma machines (and earlier)
https://bugs.webkit.org/show_bug.cgi?id=300083
Summary Vorbis decoder can't be instantiated in the content process on Sonoma machine...
Jean-Yves Avenard [:jya]
Reported 2025-10-03 01:30:07 PDT
AudioComponentFetchServerRegistrations is non functional on those version. rdar://161878608
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-10-03 01:38:22 PDT
EWS
Comment 2 2025-10-03 06:55:23 PDT
Committed 300936@main (2d86811e87f1): <https://commits.webkit.org/300936@main> Reviewed commits have been landed. Closing PR #51736 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.